--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,20 @@
-name: CI/CD Pipeline
+name: Deploy to Github Pages
+
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
+
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Install dependencies
-      run: |
-        npm install
-    - name: Build the project
-      run: |
-        npm run build
-    - name: Test the project
-      run: |
-        npm run test
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build and Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          branch: gh-pages
+          folder: .
