--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
   "scripts": {
     "build": "webpack --mode production"
   },
+  "browsersList": [
+    "last 2 versions",
+    "not dead",
+    "not < 2%"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "babel-loader": "^9.1.3",
+    "core-js": "^3.35.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
