--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "core-js": "^3.35.0",
+    "css-loader": "^6.9.0",
+    "cssnano": "^6.0.3",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss-loader": "^7.3.4",
+    "postcss-pxtorem": "^6.0.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
