--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a simple calculator app.",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "dev": "webpack serve --mode development"
   },
   "browsersList": [
     "last 2 versions",
@@ -26,6 +27,8 @@
     "postcss-loader": "^7.3.4",
     "postcss-pxtorem": "^6.0.0",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-bundle-analyzer": "^4.10.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
